Fix margin of navbar on mobile devices

--- a/src/stylesheets/common/_navbar.scss
+++ b/src/stylesheets/common/_navbar.scss
@@ -60,6 +60,7 @@ body {
   .navbar-nav {
     background: $navbar-default-bg;
     margin-top: 0;
+    margin-bottom: 0;
 
     li > a {
       display: inline-block;
